--- a/src/components/inputBlock/inputblock.css
+++ b/src/components/inputBlock/inputblock.css
@@ -32,7 +32,7 @@ input[type="text"],input[type="email"], textarea[type="text"] {
   position: absolute;
   bottom: -1px;
   left: 0;
-  border-bottom: 2px solid #2a9d8f;
+  border-bottom: 2px solid #fafafa;
   width: 100%;
   height: 100%;
   transform: translateX(-100%);
@@ -51,13 +51,13 @@ input[type="text"],input[type="email"], textarea[type="text"] {
 .form input:valid + .form-label .label-content {
   transform: translateY(-120%);
   font-size: 13px;
-  color: #2a9d8f;
+  color: #fafafa;
 }
 
 .form input[value]:not([value=""]) + .form-label .label-content{
   transform: translateY(-120%);
   font-size: 13px;
-  color: #2a9d8f;
+  color: #fafafa;
 }
 
 
