--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -1,56 +1,56 @@
 /* Contact */
 
 
-#contact{
-  display: grid;
-  align-items: center;
+#contact {
   background-color: #222;
   padding: 30px 0;
-  min-height: 100vh;
 }
 
 
 
-.connect h1{
+.connect h1 {
   font-size: 3rem;
   padding: 20px 0 0 0;
   color: #f1f1f1;
   border-bottom: 2px solid #f1f1f1;
   display: inline-block;
 }
-.connect{
+
+.connect {
   margin: 20px 0 60px 0;
-  display: flex;
-  justify-content: space-between;
-  width: 70%;
+
 }
 
-.social-media{
+.social-media {
   width: 120px;
-  display:flex;
-  justify-content:space-between;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.icon{
+.icon {
   width: 50px;
 }
 
-.name-block{
+.name-block {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
 
-.form-block form{
+.form {
+  width: 100%;
+}
+
+
+.form-block form {
   display: grid;
   width: 70%;
   grid-gap: 30px;
 }
 
 
-textarea[type="text"]{
+textarea[type="text"] {
   width: 100%;
   height: 250px;
   font-size: 1.2rem;
@@ -60,7 +60,7 @@ textarea[type="text"]{
   transition: all 0.6s ease;
 }
 
-textarea[type="text"]:focus{
+textarea[type="text"]:focus {
   outline-color: #fafafa;
   -webkit-box-shadow: 0px 0px 10px 1px #fafafa;
   -moz-box-shadow: 0px 0px 10px 1px #fafafa;
@@ -77,6 +77,16 @@ textarea[type="text"]:focus{
   transition: all 0.3s ease;
   cursor: pointer;
   border-color: #fafafa;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: auto;
+  display: flex;
+  justify-content: end;
+}
+
+.mailing-info {
+  display: flex;
+  width: 100%;
 }
 
 #button:hover {
@@ -84,43 +94,62 @@ textarea[type="text"]:focus{
   color: #222;
 }
 
-#msg_sent{
+#msg_sent {
   padding: 10px 20px;
   color: white;
   height: 10px;
 }
 
 @media screen and (max-width: 1500px) {
-  .connect h1{
+  .connect h1 {
     font-size: 2rem;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .connect{
+  .connect {
     width: 100%;
   }
-  .connect h1{
+
+  .connect h1 {
     font-size: 6.2vw;
     padding: 0;
   }
-  .name-block{
+
+  .name-block {
     grid-template-columns: 1fr;
   }
-  .social-media{
+
+  .social-media {
     width: 60px;
   }
-  .social-media a{
+
+  .social-media a {
     width: 25px;
   }
-  .form-block form{
+
+  .form-block form {
     width: 100%;
-  }
-  .email{
-    width: 100%;
-  }
-  #button {
-    font-size: .75rem;
   }
 
+  .email {
+    width: 100%;
+  }
+
+  #button {
+    font-size: .75rem;
+
+  }
+
+}
+
+.footer-container {
+  display: flex;
+  gap: 20px;
+}
+
+@media screen and (max-width: 750px) {
+  .footer-container {
+    flex-direction: column;
+  }
 }
