--- a/src/sections/gallery/gallery.css
+++ b/src/sections/gallery/gallery.css
@@ -1,32 +1,40 @@
-.galleryComponent{
-  margin: 50px auto 100px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-}
+.galleryComponent {}
 
-.galleryText{
-  width: 60%;
-  margin:auto;
+.galleryText {
+  width: 100%;
+  margin: 30px auto;
   text-align: justify;
+  padding-bottom: 50px;
 }
 
-.galleryYear{
+.galleryYear {
   margin-bottom: 20px;
 }
 
 @media screen and (max-width: 1500px) {
-  .galleryComponent{
+  .galleryComponent {
     grid-template-columns: 1fr;
   }
-  .galleryText{
+
+  .galleryText {
     width: 100%;
     padding: 10px;
   }
-  .overviewBlock-portraitright{
+
+  .overviewBlock-portraitright {
     margin: 15px 0 0 0;
   }
-  .overviewBlock-portraitleft{
+
+  .overviewBlock-portraitleft {
     margin: 15px 0 0 0;
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .galleryComponent {
+    display: block;
+    margin: 0;
+    max-width: 100%;
   }
 }
